k8s/deployment.yaml
# Deploy do postgre
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: postgre
  template:
    metadata:
      labels:
        app: postgre
    spec:
      containers:
        - name: postgre
          image: postgres:13.1
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgre
spec: 
  selector:
    app: postgre
  ports:
    - port: 5432
---
# Deploy da Aplicação Web
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviewfilmes
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: reviewfilmes
  template:
    metadata:
      labels:
        app: reviewfilmes
    spec:
      containers:
        - name: reviewfilmes
          image: danferreira011/projeto-devops-pro
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: reviewfilmes
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing # loadbalancer publico
spec: 
  selector:
    app: reviewfilmes
  ports:
    - port: 80
      targetPort: 8080
      #nodePort: 30000
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reviewfilmes
  labels:
    name: reviewfilmes
spec:
  ingressClassName: nginx
  rules:
  - host: homologacao.danferreira.vip
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: reviewfilmes
            port: 
              number: 80
